deploy/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mm_example_api
spec:
  host: mm-example-api
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mm-example-srv-1
spec:
  host: mm-example-srv-1
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mm-example-srv-2
spec:
  host: mm-example-srv-2
  subsets:
  - name: v1
    labels:
      version: v1
---
